--- a/tests/cns_tests_sample_config.yml
+++ b/tests/cns_tests_sample_config.yml
@@ -92,8 +92,34 @@ cns:
             storage_class1:
                 name: storage_class1
                 provisioner:
-                default:
+                resturl:
+                restuser:
+                secretnamespace:
+                secretname:
             storage_class2:
                 name: storage_class2
                 provisioner:
-                default:
+                resturl:
+                restuser:
+                restsecretnamespace:
+                restsecretname:
+                hacount: "3"
+                chapauthenabled: "true"
+        secrets:
+            secret1:
+                secret_name: secret1
+                namespace:
+                data_key:
+                type:
+            secret2:
+                secret_name: secret2
+                namespace:
+                data_key:
+                type:
+        start_count_for_pvc: 1
+        pvc_size_number:
+            10: 2
+            20: 1
+        app_pvc_count_dict:
+           nginx: 2
+
