Add support of heketi_cli_user and heketi_cli_key
Just define following config options:
  cns:
      heketi_config:
          heketi_cli_user: 'admin'
          heketi_cli_key: 'some_secret_admin_key'

To make heketi tests use specific creds for auth.

Change-Id: I60f6d6e3922de6602d8fd39656132a23f18ffc8c

--- a/tests/cns_tests_sample_config.yml
+++ b/tests/cns_tests_sample_config.yml
@@ -74,6 +74,8 @@ cns:
     heketi_config:
         heketi_client_node:
         heketi_server_url: "http://heketi-storage-project.cloudapps.mystorage.com"
+        heketi_cli_user: "admin"
+        heketi_cli_key: "admin"
         heketi_ssh_key: "/etc/heketi/heketi_key"
         heketi_config_file: "/etc/heketi/heketi.json"
     heketi_volume:
