CNS: adding testcase and library for  volnameprefix
Change-Id: I84968bcfe19aa8af73f185be178079a8373915b3
Signed-off-by: Apeksha D Khakharia <akhakhar@redhat.com>

--- a/tests/cns_tests_sample_config.yml
+++ b/tests/cns_tests_sample_config.yml
@@ -99,6 +99,7 @@ cns:
                 restuser:
                 secretnamespace:
                 secretname:
+                volumenameprefix: "cns-vol"
             storage_class2:
                 name: storage_class2
                 provisioner:
