Add 'functional' venv to tox config
Now, it is possible to run the functional tests having all the
dependencies installed in it with following command:

  $ tox -e functional -- glusto -c %config%.yaml --pytest='-v -s tests'

Local 'cnslibs' package is installed in editable mode, it means that
any changes to its files will be taken up by next run of tests using
above tox venv command.

Also, update '.gitignore' file ignoring more temp files.

Change-Id: I3118489f4fb6e52e5e94705b68c18ea1783a18b6

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,15 @@
 # Linux swap files range from .saa to .swp
 *.s[a-w][a-p]
 
-# Python bytecode files
+# Python bytecode and other related temp files
 *.pyc
 *.pyo
+*egg-info
 
 # Development environment files
 .project
 .pydevproject
+
+# Cache files
+.cache
+.pytest_cache
