--- a/tox.ini
+++ b/tox.ini
@@ -6,12 +6,25 @@ envlist = pep8
 [testenv]
 basepython = python2.7
 setenv = VIRTUAL_ENV={envdir}
-whitelist_externals = find
+whitelist_externals = *
 commands = find . -type f -name "*.py[c|o]" -delete
 
 [testenv:pep8]
 deps = -r{toxinidir}/test-requirements.txt
 commands = flake8 {posargs}
+
+[testenv:functional]
+deps =
+    rtyaml
+    ddt
+    git+git://github.com/loadtheaccumulator/glusto.git
+    git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-gluster&subdirectory=glustolibs-gluster
+    git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-io&subdirectory=glustolibs-io
+    git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-misc&subdirectory=glustolibs-misc
+    --editable=file:///{toxinidir}/cns-libs
+commands =
+    find . -type f -name "*.py[c|o]" -delete
+    {posargs:bash -c "echo 'No commands have been specified. Exiting.'; exit 1"}
 
 [testenv:venv]
 commands = {posargs}
