--- a/tox.ini
+++ b/tox.ini
@@ -7,23 +7,27 @@ envlist = pep8
 basepython = python2.7
 setenv = VIRTUAL_ENV={envdir}
 whitelist_externals = *
-commands = find . -type f -name "*.py[c|o]" -delete
-
-[testenv:pep8]
-deps = -r{toxinidir}/test-requirements.txt
-commands = flake8 {posargs}
-
-[testenv:functional]
-deps =
-    rtyaml
-    ddt
-    git+git://github.com/loadtheaccumulator/glusto.git
-    git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-gluster&subdirectory=glustolibs-gluster
-    git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-io&subdirectory=glustolibs-io
-    git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-misc&subdirectory=glustolibs-misc
-    --editable=file:///{toxinidir}/cns-libs
 commands =
     find . -type f -name "*.py[c|o]" -delete
+    python -m pip install --upgrade pip>=9.0.0 setuptools wheel
+
+[testenv:pep8]
+commands =
+    {[testenv]commands}
+    pip install -r{toxinidir}/test-requirements.txt
+    flake8 {posargs}
+
+[testenv:functional]
+commands =
+    {[testenv]commands}
+    pip install \
+        rtyaml \
+        ddt \
+        git+git://github.com/loadtheaccumulator/glusto.git \
+        "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-gluster&subdirectory=glustolibs-gluster" \
+        "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-io&subdirectory=glustolibs-io" \
+        "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-misc&subdirectory=glustolibs-misc" \
+        --editable=file:///{toxinidir}/cns-libs
     {posargs:bash -c "echo 'No commands have been specified. Exiting.'; exit 1"}
 
 [testenv:venv]
