Fix broken dynamic_provisioning tests
Fix 2 autotests, remove skip decorator for them.
And rework logic of mongodb template uploading for mongodb pod,
so it takes couple of seconds instead of minutes.

Change-Id: Ib2b09364ae435b9784b76c2f2581c197128f9649

--- a/tests/cns_tests_sample_config.yml
+++ b/tests/cns_tests_sample_config.yml
@@ -72,6 +72,7 @@ cns:
     trusted_storage_pool_list:
         - [gluster_server1, gluster_server2]
     heketi_config:
+        heketi_dc_name: "fake-name-of-heketi-deployment-config"
         heketi_service_name: "fake-name-of-heketi-service"
         heketi_client_node:
         heketi_server_url: "http://heketi-storage-project.cloudapps.mystorage.com"
