[CNS-944] Add test with arbiter volume creation
Change-Id: I257f3e6a7389c9f15a4388c241e787782c186d14

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ commands =
 commands =
     {[testenv]commands}
     pip install \
+        mock \
         rtyaml \
         ddt \
         git+git://github.com/loadtheaccumulator/glusto.git \
