Added library for scalling jenkins
Change-Id: I49932f43ac4e41f06c559d1d18d142b8a084278e
Signed-off-by: vamahaja <vamahaja@redhat.com>

--- a/tests/cns_tests_sample_config.yml
+++ b/tests/cns_tests_sample_config.yml
@@ -128,3 +128,17 @@ cns:
         app_pvc_count_dict:
            nginx: 2
 
+scale:
+    - type: jenkins
+      instances: 1
+      namespace: "<fake-namespace-name>"
+      pod_parameters:
+        ENABLE_OAUTH: false
+        MEMORY_LIMIT: "<fake-memory-limit-size>Mi"
+        VOLUME_CAPACITY: "<fake-size-of-gluster-storage>Gi"
+        STORAGE_CLASS_NAME: "fake-name-of-storage-class"
+        JENKINS_IMAGE_STREAM_TAG: "jenkins:2"
+      load_parameters:
+        JOBS: 30
+        ITERATIONS: 30
+        EXECUTORS: 5
