test cases for heketi metrics
CNS-1243 - Heketi_metrics_generate
CNS-1244 - Heketi_metrics_validating_VolumeCount_on_creation
CNS-1245 - Heketi_metrics_validating_VolumeCount_on_deletion
CNS-1262 - Heketi-metrics_validating_heketi_pod failure

Change-Id: Idb863d1ceaf555dfc2a9cff863b97cda65a816f6
Signed-off-by: nigoyal <nigoyal@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ commands =
         mock \
         rtyaml \
         ddt \
+        prometheus_client>=0.4.2 \
         git+git://github.com/loadtheaccumulator/glusto.git \
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-gluster&subdirectory=glustolibs-gluster" \
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-io&subdirectory=glustolibs-io" \
