[CNS-926] test case for custom volname prefix
CNS-926 - custom_volname_prefix_blockvol
This test case is verifying the volume name prefix option in storage class

Change-Id: I738e97520670bae19b7582217a98c2769b78808f
Signed-off-by: nigoyal <nigoyal@redhat.com>

--- a/tests/cns_tests_sample_config.yml
+++ b/tests/cns_tests_sample_config.yml
@@ -110,6 +110,7 @@ cns:
                 restsecretname:
                 hacount: "3"
                 chapauthenabled: "true"
+                volumenameprefix: "cns-vol"
         secrets:
             secret1:
                 secret_name: secret1
