Add possibility to skip test cases and cleanups after failure
In some cases, it is useful to stop test execution after first failure.
Not only stop it, but also skip all the scheduled cleanups.
It will allow us to keep a cluster in the best state for a root cause
debugging.

Just define 'common.stop_on_first_failure' option to True value
in the config file. It will make the test runner stop after first
failure skipping all the scheduled cleanups and pending test cases.

Change-Id: I963eb038a11a8e2088a84f7ba4838870ea3e657a

--- a/tests/cns_tests_sample_config.yml
+++ b/tests/cns_tests_sample_config.yml
@@ -55,3 +55,6 @@ openshift:
                 hacount: "3"
                 chapauthenabled: "true"
                 volumenameprefix: "autotests-block"
+
+common:
+    stop_on_first_failure: False
