Add end-to-end OCP 'deployment' functionality
Add end-to-end deployment tool of OpenShift and OpenShift Container
Storage on top of VMWare.

Added code is modified version of the
'reference-architecture/vmware-ansible' dir from the following repo:
https://github.com/vponomaryov/openshift-ansible-contrib

Read 'deployment/README.rst' file for more details about the
deployment tool.

Change-Id: Ic96f252ff786cc1ecf24d27f0ec47e324131e41b

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Virtual environment related stuff
 .tox/*
+deployment/.tox/*
 
 # Log files
 *.log
@@ -15,7 +16,18 @@
 # Development environment files
 .project
 .pydevproject
+.idea
+.vagrant
+*.komodoproject
 
-# Cache files
+# Cache and temp files
 .cache
 .pytest_cache
+*~
+
+# Deplyoment tool related files
+add-node.json
+infrastructure.json
+cns-automation-config*.yaml
+ocp-on-vmware*.ini*
+*.retry
