[Deployment] Add CRI-O support
To enable or disable CRI-O just define following option:

    openshift_use_crio = true/false

In the "ocp-on-vmware.ini" config file.

Change-Id: Ibd3843d8aa13bfacb0d927142786dc5599e65315

--- a/deployment/ocp-on-vmware.ini
+++ b/deployment/ocp-on-vmware.ini
@@ -105,6 +105,11 @@ web_console_install=false
 # OpenShift SDN (default value redhat/openshift-ovs-subnet)
 openshift_sdn=redhat/openshift-ovs-subnet
 
+########################
+#  CRI-O runtime support
+openshift_use_crio=false
+########################
+
 # persistent container storage: none, crs, cns
 container_storage=none
 
