--- a/deployment/playbooks/node-setup.yaml
+++ b/deployment/playbooks/node-setup.yaml
@@ -27,6 +27,8 @@
     load_balancer_hostname: "{{ lb_host }}"
     openshift_master_cluster_hostname: "{{ load_balancer_hostname }}"
     openshift_master_cluster_public_hostname: "{{ load_balancer_hostname }}"
+    openshift_crio_docker_gc_node_selector:
+      runtime: crio
     # 'openshift_node_groups' is required for OCP3.10
     openshift_node_groups:
     - name: node-config-master
@@ -34,14 +36,57 @@
       - 'node-role.kubernetes.io/master=true'
       - 'role=master'
       edits: []
+    - name: node-config-master-crio
+      labels:
+      - 'node-role.kubernetes.io/master=true'
+      - 'role=master'
+      - 'runtime=cri-o'
+      edits:
+      - key: kubeletArguments.container-runtime
+        value: ["remote"]
+      - key: kubeletArguments.container-runtime-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.image-service-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.runtime-request-timeout
+        value: ["10m"]
     - name: node-config-compute
       labels:
       - 'node-role.kubernetes.io/compute=true'
       - 'node-role.kubernetes.io/infra=true'
       - 'role=compute'
       edits: []
+    - name: node-config-compute-crio
+      labels:
+      - 'node-role.kubernetes.io/compute=true'
+      - 'node-role.kubernetes.io/infra=true'
+      - 'role=compute'
+      - 'runtime=cri-o'
+      edits:
+      - key: kubeletArguments.container-runtime
+        value: ["remote"]
+      - key: kubeletArguments.container-runtime-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.image-service-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.runtime-request-timeout
+        value: ["10m"]
     - name: node-config-storage
       labels:
       - 'node-role.kubernetes.io/storage=true'
       - 'role=storage'
       edits: []
+    - name: node-config-storage-crio
+      labels:
+      - 'node-role.kubernetes.io/storage=true'
+      - 'role=storage'
+      - 'runtime=cri-o'
+      edits:
+      - key: kubeletArguments.container-runtime
+        value: ["remote"]
+      - key: kubeletArguments.container-runtime-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.image-service-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.runtime-request-timeout
+        value: ["10m"]
