--- a/deployment/playbooks/ocp-install.yaml
+++ b/deployment/playbooks/ocp-install.yaml
@@ -14,6 +14,8 @@
           '/usr/share/ansible/openshift-ansible/playbooks/prerequisites.yml'
   ) }}"
   vars:
+    openshift_crio_docker_gc_node_selector:
+      runtime: crio
     # 'openshift_node_groups' is required for OCP3.10
     openshift_node_groups:
     - name: node-config-master
@@ -21,17 +23,60 @@
       - 'node-role.kubernetes.io/master=true'
       - 'role=master'
       edits: []
+    - name: node-config-master-crio
+      labels:
+      - 'node-role.kubernetes.io/master=true'
+      - 'role=master'
+      - 'runtime=cri-o'
+      edits:
+      - key: kubeletArguments.container-runtime
+        value: ["remote"]
+      - key: kubeletArguments.container-runtime-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.image-service-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.runtime-request-timeout
+        value: ["10m"]
     - name: node-config-compute
       labels:
       - 'node-role.kubernetes.io/compute=true'
       - 'node-role.kubernetes.io/infra=true'
       - 'role=compute'
       edits: []
+    - name: node-config-compute-crio
+      labels:
+      - 'node-role.kubernetes.io/compute=true'
+      - 'node-role.kubernetes.io/infra=true'
+      - 'role=compute'
+      - 'runtime=cri-o'
+      edits:
+      - key: kubeletArguments.container-runtime
+        value: ["remote"]
+      - key: kubeletArguments.container-runtime-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.image-service-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.runtime-request-timeout
+        value: ["10m"]
     - name: node-config-storage
       labels:
       - 'node-role.kubernetes.io/storage=true'
       - 'role=storage'
       edits: []
+    - name: node-config-storage-crio
+      labels:
+      - 'node-role.kubernetes.io/storage=true'
+      - 'role=storage'
+      - 'runtime=cri-o'
+      edits:
+      - key: kubeletArguments.container-runtime
+        value: ["remote"]
+      - key: kubeletArguments.container-runtime-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.image-service-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.runtime-request-timeout
+        value: ["10m"]
 
 - name: call openshift includes for installer
   include: "{{
@@ -104,6 +149,8 @@
       kind: 'AllowAllPasswordIdentityProvider'
       login: True
       challenge: True
+    openshift_crio_docker_gc_node_selector:
+      runtime: crio
     # 'openshift_node_groups' is required for OCP3.10
     openshift_node_groups:
     - name: node-config-master
@@ -111,17 +158,60 @@
       - 'node-role.kubernetes.io/master=true'
       - 'role=master'
       edits: []
+    - name: node-config-master-crio
+      labels:
+      - 'node-role.kubernetes.io/master=true'
+      - 'role=master'
+      - 'runtime=cri-o'
+      edits:
+      - key: kubeletArguments.container-runtime
+        value: ["remote"]
+      - key: kubeletArguments.container-runtime-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.image-service-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.runtime-request-timeout
+        value: ["10m"]
     - name: node-config-compute
       labels:
       - 'node-role.kubernetes.io/compute=true'
       - 'node-role.kubernetes.io/infra=true'
       - 'role=compute'
       edits: []
+    - name: node-config-compute-crio
+      labels:
+      - 'node-role.kubernetes.io/compute=true'
+      - 'node-role.kubernetes.io/infra=true'
+      - 'role=compute'
+      - 'runtime=cri-o'
+      edits:
+      - key: kubeletArguments.container-runtime
+        value: ["remote"]
+      - key: kubeletArguments.container-runtime-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.image-service-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.runtime-request-timeout
+        value: ["10m"]
     - name: node-config-storage
       labels:
       - 'node-role.kubernetes.io/storage=true'
       - 'role=storage'
       edits: []
+    - name: node-config-storage-crio
+      labels:
+      - 'node-role.kubernetes.io/storage=true'
+      - 'role=storage'
+      - 'runtime=cri-o'
+      edits:
+      - key: kubeletArguments.container-runtime
+        value: ["remote"]
+      - key: kubeletArguments.container-runtime-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.image-service-endpoint
+        value: ["/var/run/crio/crio.sock"]
+      - key: kubeletArguments.runtime-request-timeout
+        value: ["10m"]
 
 - hosts: allnodes
   gather_facts: no
