--- a/deployment/playbooks/roles/docker-storage-setup/tasks/main.yaml
+++ b/deployment/playbooks/roles/docker-storage-setup/tasks/main.yaml
@@ -3,6 +3,7 @@
   file:
     path: /etc/sysconfig/docker-storage
     state: absent
+  when: not (openshift_use_crio | bool)
 
 - block:
     - name: create the docker-storage config file
@@ -12,10 +13,10 @@
         owner: root
         group: root
         mode: 0644
-
   when:
     - ansible_distribution_version | version_compare('7.4', '>=')
     - ansible_distribution == "RedHat"
+    - not (openshift_use_crio | bool)
 
 - block:
     - name: create the docker-storage-setup config file
@@ -25,10 +26,14 @@
         owner: root
         group: root
         mode: 0644
-
   when:
     - ansible_distribution_version | version_compare('7.4', '<')
     - ansible_distribution == "RedHat"
+    - not (openshift_use_crio | bool)
 
 - name: start docker
-  service: name=docker state=started enabled=true
+  service:
+    name: docker
+    state: started
+    enabled: true
+  when: not (openshift_use_crio | bool)
