--- a/deployment/playbooks/roles/instance-groups/tasks/main.yaml
+++ b/deployment/playbooks/roles/instance-groups/tasks/main.yaml
@@ -20,7 +20,8 @@
   add_host:
     name: "{{ hostvars[item].inventory_hostname }}"
     groups: allnodes, masters, etcd, nodes, cluster_hosts, master
-    openshift_node_group_name: "node-config-master"
+    openshift_node_group_name: "node-config-master{{
+      (openshift_use_crio | bool) | ternary('-crio', '') }}"
   with_items: "{{ groups[cluster_id + '-master'] }}"
   when:
     - "openshift_vers not in ['v3_6', 'v3_7', 'v3_9', 'v3_10']"
@@ -40,7 +41,8 @@
   add_host:
     name: "{{ hostvars[item].inventory_hostname }}"
     groups: single_master
-    openshift_node_group_name: "node-config-master"
+    openshift_node_group_name: "node-config-master{{
+      (openshift_use_crio | bool) | ternary('-crio', '') }}"
   with_items: "{{ groups[cluster_id + '-master'][0] }}"
   when:
     - "openshift_vers not in ['v3_6', 'v3_7', 'v3_9', 'v3_10']"
@@ -60,7 +62,8 @@
   add_host:
     name: "{{ hostvars[item].inventory_hostname }}"
     groups: allnodes, nodes, cluster_hosts, schedulable_nodes, compute
-    openshift_node_group_name: "node-config-compute"
+    openshift_node_group_name: "node-config-compute{{
+      (openshift_use_crio | bool) | ternary('-crio', '') }}"
   with_items: "{{ groups[cluster_id + '-compute'] }}"
   when:
     - "openshift_vers not in ['v3_6', 'v3_7', 'v3_9', 'v3_10']"
@@ -81,7 +84,8 @@
   add_host:
     name: "{{ hostvars[item].inventory_hostname }}"
     groups: allnodes, new_nodes
-    openshift_node_group_name: "node-config-compute"
+    openshift_node_group_name: "node-config-compute{{
+      (openshift_use_crio | bool) | ternary('-crio', '') }}"
   with_items: "{{ groups.tag_provision_node | default([]) }}"
   when:
     - add_node is defined
@@ -104,7 +108,8 @@
   add_host:
     name: "{{ hostvars[item].inventory_hostname }}"
     groups: allnodes
-    openshift_node_group_name: "node-config-storage"
+    openshift_node_group_name: "node-config-storage{{
+      (openshift_use_crio | bool) | ternary('-crio', '') }}"
   with_items: "{{ groups[cluster_id + '-storage'] | default([]) }}"
 
 - name: Add crs instances to allnodes
@@ -118,7 +123,8 @@
   add_host:
     name: "{{ hostvars[item].inventory_hostname }}"
     groups: nodes, cluster_hosts, schedulable_nodes, storage
-    openshift_node_group_name: "node-config-storage"
+    openshift_node_group_name: "node-config-storage{{
+      (openshift_use_crio | bool) | ternary('-crio', '') }}"
   with_items: "{{ groups[cluster_id + '-storage'] }}"
   when:
     - "'cns' in container_storage and add_node is defined and 'storage' in node_type"
@@ -142,14 +148,5 @@
     groups: storage, crs
     openshift_node_group_name: "node-config-storage"
   with_items: "{{ groups[cluster_id + '-crs'] }}"
-  when:
-    - "'crs' in container_storage and add_node is defined and 'storage' in node_type"
-
-- name: Add a crs node to the single crs group
-  add_host:
-    name: "{{ hostvars[item].inventory_hostname }}"
-    groups: single_crs
-    openshift_node_group_name: "node-config-storage"
-  with_items: "{{ groups[cluster_id + '-crs'][0] }}"
   when:
     - "'crs' in container_storage and add_node is defined and 'storage' in node_type"
