--- a/deployment/playbooks/vars/main.yaml
+++ b/deployment/playbooks/vars/main.yaml
@@ -11,6 +11,8 @@ openshift_required_repos:
 - rhel-7-server-extras-rpms
 - rhel-7-server-ose-3.{{ openshift_major_version }}-rpms
 - rhel-7-fast-datapath-rpms
+openshift_crio_docker_gc_node_selector:
+  runtime: crio
 # 'openshift_node_groups' is required for OCP3.10
 openshift_node_groups:
 - name: node-config-master
@@ -18,14 +20,57 @@ openshift_node_groups:
   - 'node-role.kubernetes.io/master=true'
   - 'role=master'
   edits: []
+- name: node-config-master-crio
+  labels:
+  - 'node-role.kubernetes.io/master=true'
+  - 'role=master'
+  - 'runtime=cri-o'
+  edits:
+  - key: kubeletArguments.container-runtime
+    value: ["remote"]
+  - key: kubeletArguments.container-runtime-endpoint
+    value: ["/var/run/crio/crio.sock"]
+  - key: kubeletArguments.image-service-endpoint
+    value: ["/var/run/crio/crio.sock"]
+  - key: kubeletArguments.runtime-request-timeout
+    value: ["10m"]
 - name: node-config-compute
   labels:
-    - 'node-role.kubernetes.io/compute=true'
-    - 'node-role.kubernetes.io/infra=true'
-    - 'role=compute'
+   - 'node-role.kubernetes.io/compute=true'
+   - 'node-role.kubernetes.io/infra=true'
+   - 'role=compute'
   edits: []
+- name: node-config-compute-crio
+  labels:
+  - 'node-role.kubernetes.io/compute=true'
+  - 'node-role.kubernetes.io/infra=true'
+  - 'role=compute'
+  - 'runtime=cri-o'
+  edits:
+  - key: kubeletArguments.container-runtime
+    value: ["remote"]
+  - key: kubeletArguments.container-runtime-endpoint
+    value: ["/var/run/crio/crio.sock"]
+  - key: kubeletArguments.image-service-endpoint
+    value: ["/var/run/crio/crio.sock"]
+  - key: kubeletArguments.runtime-request-timeout
+    value: ["10m"]
 - name: node-config-storage
   labels:
-    - 'node-role.kubernetes.io/storage=true'
-    - 'role=storage'
+   - 'node-role.kubernetes.io/storage=true'
+   - 'role=storage'
   edits: []
+- name: node-config-storage-crio
+  labels:
+  - 'node-role.kubernetes.io/storage=true'
+  - 'role=storage'
+  - 'runtime=cri-o'
+  edits:
+  - key: kubeletArguments.container-runtime
+    value: ["remote"]
+  - key: kubeletArguments.container-runtime-endpoint
+    value: ["/var/run/crio/crio.sock"]
+  - key: kubeletArguments.image-service-endpoint
+    value: ["/var/run/crio/crio.sock"]
+  - key: kubeletArguments.runtime-request-timeout
+    value: ["10m"]
