Reorder lib files removing redundant dir layer
Move all the files of 'cns-libs/cnslibs/common' dir
to the 'openshift-storage-libs/openshiftstoragelibs',
because 'common' is the only dir there, which doesn't really makes sense.
And "cns" is old project name, so, replace it with
"openshift-storage-libs".

Also, fix all the imports of these libs.

Change-Id: Ife00a73554e73b21b214b15016b0c8dbbf423446

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands =
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-gluster&subdirectory=glustolibs-gluster" \
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-io&subdirectory=glustolibs-io" \
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-misc&subdirectory=glustolibs-misc" \
-        --editable=file:///{toxinidir}/cns-libs
+        --editable=file:///{toxinidir}/openshift-storage-libs
     {posargs:bash -c "echo 'No commands have been specified. Exiting.'; exit 1"}
 
 [testenv:venv]
