--- a/tox.ini
+++ b/tox.ini
@@ -21,11 +21,30 @@ commands =
 commands =
     {[testenv]commands}
     pip install \
+        simplejson \
         mock \
         rtyaml \
         ddt \
         prometheus_client>=0.4.2 \
         git+git://github.com/loadtheaccumulator/glusto.git \
+        "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-gluster&subdirectory=glustolibs-gluster" \
+        "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-io&subdirectory=glustolibs-io" \
+        "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-misc&subdirectory=glustolibs-misc" \
+        --editable=file:///{toxinidir}/openshift-storage-libs
+    {posargs:bash -c "echo 'No commands have been specified. Exiting.'; exit 1"}
+
+[testenv:functional3]
+basepython = python3
+commands =
+    find . -type f -name "*.py[c|o]" -delete
+    python3 -m pip install --upgrade pip>=9.0.0 setuptools wheel
+    pip3 install \
+        simplejson \
+        mock \
+        rtyaml \
+        ddt \
+        prometheus_client>=0.4.2 \
+        git+git://github.com/loadtheaccumulator/glusto.git@python3_port1 \
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-gluster&subdirectory=glustolibs-gluster" \
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-io&subdirectory=glustolibs-io" \
         "git+git://github.com/gluster/glusto-tests.git#egg=glustolibs-misc&subdirectory=glustolibs-misc" \
