[Deployment] Fix OCP3.6 and 3.7 installation
By doing following changes:
- Fix the deployment logic using separate set of vars for
  installation of OCP3.6 and 3.7, which were broken by the too new
  config options, which started being supported only since OCP3.9.
- Add waiters for oc services after nodes reboot.
- Do not update docker for OCP3.6 and 3.7 versions. Because,
  docker version should be fixed for it.
- Add all cluster nodes to the 'OSEv3' Ansible host group,
  because it is required in some places.
- Do not specify 'openshift_use_crio' option for all OCP versions
  except OCP3.11 for 2 reasons:
-- It is supported only for this OCP version
-- Other versions try to run some CRI-O plays just having this option
   defined. In other words - avoid bugs.

Change-Id: I7ab3db30a828f0e965c907282a54b2ae9aead00a

--- a/deployment/playbooks/crs-node-setup.yaml
+++ b/deployment/playbooks/crs-node-setup.yaml
@@ -111,3 +111,13 @@
   become: no
   roles:
   - yum-update-and-reboot
+
+- hosts: single_master
+  gather_facts: no
+  tasks:
+  - name: Make sure oc client is responsive
+    command: oc status
+    retries: 120
+    delay: 5
+    register: oc_status_result
+    until: oc_status_result is succeeded
