--- a/deployment/playbooks/roles/vmware-guest-setup/tasks/main.yaml
+++ b/deployment/playbooks/roles/vmware-guest-setup/tasks/main.yaml
@@ -45,7 +45,7 @@
       delay: 5
       register: result
       until: result is succeeded
-      when: not (openshift_use_crio | bool)
+      when: not (openshift_use_crio | default(false) | bool)
 
     - name: be sure openvmtools is running and enabled
       service: name=vmtoolsd state=started enabled=yes
